# video-buzzer

./: Cargo.toml  LICENSE.txt  README.md  buzzer.html  join.html  video.html
.github/workflows/: test.yml
contrib/: apache2.conf  nginx.conf
css/: custom.css
src/: files.rs  main.rs
