[package]
name = "video-buzzer"
version = "0.1.0"
authors = ["Remi Rampin <r@remirampin.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
warp = "0.2"
rand = "0.8"
percent-encoding = "2"
